--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
             "name": "Valentin ANTOIN",
             "email": "valentin.antoin@gmail.com"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    }
 }
