--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
-            "public\\": "public/"
+            "models\\": "models/"
         }
     }
 }
