--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
-            "models\\": "models/"
+            "models\\": "models/",
+            "controllers\\": "controllers/"
         }
     }
 }
