--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "psr-4": {
             "App\\": "src/",
             "models\\": "models/",
-            "controllers\\": "controllers/"
+            "controllers\\": "controllers/",
+            "config\\": "config/"
         }
     }
 }
