Fix double routing

--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
-            "models\\": "models/",
-            "controllers\\": "controllers/",
-            "config\\": "config/"
+            "Config\\": "config/"
         }
     }
 }
